MegaScryptLib/MegaScrypt/Generated/MegaScryptParser.cpp

// Generated from MegaScrypt.g4 by ANTLR 4.8


#include "MegaScryptVisitor.h"

#include "MegaScryptParser.h"


using namespace antlrcpp;
using namespace antlr4;

MegaScryptParser::MegaScryptParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MegaScryptParser::~MegaScryptParser() {
  delete _interpreter;
}

std::string MegaScryptParser::getGrammarFileName() const {
  return "MegaScrypt.g4";
}

const std::vector<std::string>& MegaScryptParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MegaScryptParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

MegaScryptParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MegaScryptParser::StatementContext *> MegaScryptParser::ProgramContext::statement() {
  return getRuleContexts<MegaScryptParser::StatementContext>();
}

MegaScryptParser::StatementContext* MegaScryptParser::ProgramContext::statement(size_t i) {
  return getRuleContext<MegaScryptParser::StatementContext>(i);
}

std::vector<MegaScryptParser::BlockContext *> MegaScryptParser::ProgramContext::block() {
  return getRuleContexts<MegaScryptParser::BlockContext>();
}

MegaScryptParser::BlockContext* MegaScryptParser::ProgramContext::block(size_t i) {
  return getRuleContext<MegaScryptParser::BlockContext>(i);
}


size_t MegaScryptParser::ProgramContext::getRuleIndex() const {
  return MegaScryptParser::RuleProgram;
}


antlrcpp::Any MegaScryptParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MegaScryptVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

MegaScryptParser::ProgramContext* MegaScryptParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MegaScryptParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MegaScryptParser::T__0)
      | (1ULL << MegaScryptParser::T__5)
      | (1ULL << MegaScryptParser::T__6)
      | (1ULL << MegaScryptParser::T__9)
      | (1ULL << MegaScryptParser::T__10)
      | (1ULL << MegaScryptParser::T__11)
      | (1ULL << MegaScryptParser::T__13)
      | (1ULL << MegaScryptParser::Var)
      | (1ULL << MegaScryptParser::Break)
      | (1ULL << MegaScryptParser::PlusPlus)
      | (1ULL << MegaScryptParser::MinusMinus)
      | (1ULL << MegaScryptParser::Id))) != 0)) {
      setState(52);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(50);
        statement();
        break;
      }

      case 2: {
        setState(51);
        block();
        break;
      }

      }
      setState(56);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

MegaScryptParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MegaScryptParser::StatementContext *> MegaScryptParser::BlockContext::statement() {
  return getRuleContexts<MegaScryptParser::StatementContext>();
}

MegaScryptParser::StatementContext* MegaScryptParser::BlockContext::statement(size_t i) {
  return getRuleContext<MegaScryptParser::StatementContext>(i);
}


size_t MegaScryptParser::BlockContext::getRuleIndex() const {
  return MegaScryptParser::RuleBlock;
}


antlrcpp::Any MegaScryptParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MegaScryptVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

MegaScryptParser::BlockContext* MegaScryptParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, MegaScryptParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(66);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MegaScryptParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(57);
        match(MegaScryptParser::T__0);
        setState(61);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << MegaScryptParser::T__5)
          | (1ULL << MegaScryptParser::T__6)
          | (1ULL << MegaScryptParser::T__9)
          | (1ULL << MegaScryptParser::T__10)
          | (1ULL << MegaScryptParser::T__11)
          | (1ULL << MegaScryptParser::T__13)
          | (1ULL << MegaScryptParser::Var)
          | (1ULL << MegaScryptParser::Break)
          | (1ULL << MegaScryptParser::PlusPlus)
          | (1ULL << MegaScryptParser::MinusMinus)
          | (1ULL << MegaScryptParser::Id))) != 0)) {
          setState(58);
          statement();
          setState(63);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(64);
        match(MegaScryptParser::T__1);
        break;
      }

      case MegaScryptParser::T__5:
      case MegaScryptParser::T__6:
      case MegaScryptParser::T__9:
      case MegaScryptParser::T__10:
      case MegaScryptParser::T__11:
      case MegaScryptParser::T__13:
      case MegaScryptParser::Var:
      case MegaScryptParser::Break:
      case MegaScryptParser::PlusPlus:
      case MegaScryptParser::MinusMinus:
      case MegaScryptParser::Id: {
        enterOuterAlt(_localctx, 2);
        setState(65);
        statement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MegaScryptParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MegaScryptParser::SubStatementContext* MegaScryptParser::StatementContext::subStatement() {
  return getRuleContext<MegaScryptParser::SubStatementContext>(0);
}

MegaScryptParser::ReturnStmtContext* MegaScryptParser::StatementContext::returnStmt() {
  return getRuleContext<MegaScryptParser::ReturnStmtContext>(0);
}

tree::TerminalNode* MegaScryptParser::StatementContext::Break() {
  return getToken(MegaScryptParser::Break, 0);
}

MegaScryptParser::IfStatementContext* MegaScryptParser::StatementContext::ifStatement() {
  return getRuleContext<MegaScryptParser::IfStatementContext>(0);
}

MegaScryptParser::WhileStmtContext* MegaScryptParser::StatementContext::whileStmt() {
  return getRuleContext<MegaScryptParser::WhileStmtContext>(0);
}

MegaScryptParser::DoWhileStmtContext* MegaScryptParser::StatementContext::doWhileStmt() {
  return getRuleContext<MegaScryptParser::DoWhileStmtContext>(0);
}

MegaScryptParser::ForEachStmtContext* MegaScryptParser::StatementContext::forEachStmt() {
  return getRuleContext<MegaScryptParser::ForEachStmtContext>(0);
}

MegaScryptParser::ForStmtContext* MegaScryptParser::StatementContext::forStmt() {
  return getRuleContext<MegaScryptParser::ForStmtContext>(0);
}


size_t MegaScryptParser::StatementContext::getRuleIndex() const {
  return MegaScryptParser::RuleStatement;
}


antlrcpp::Any MegaScryptParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MegaScryptVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

MegaScryptParser::StatementContext* MegaScryptParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, MegaScryptParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(79);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MegaScryptParser::T__5:
      case MegaScryptParser::Var:
      case MegaScryptParser::Break:
      case MegaScryptParser::PlusPlus:
      case MegaScryptParser::MinusMinus:
      case MegaScryptParser::Id: {
        enterOuterAlt(_localctx, 1);
        setState(71);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case MegaScryptParser::Var:
          case MegaScryptParser::PlusPlus:
          case MegaScryptParser::MinusMinus:
          case MegaScryptParser::Id: {
            setState(68);
            subStatement();
            break;
          }

          case MegaScryptParser::T__5: {
            setState(69);
            returnStmt();
            break;
          }

          case MegaScryptParser::Break: {
            setState(70);
            match(MegaScryptParser::Break);
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        setState(73);
        match(MegaScryptParser::T__2);
        break;
      }

      case MegaScryptParser::T__6: {
        enterOuterAlt(_localctx, 2);
        setState(74);
        ifStatement();
        break;
      }

      case MegaScryptParser::T__9: {
        enterOuterAlt(_localctx, 3);
        setState(75);
        whileStmt();
        break;
      }

      case MegaScryptParser::T__10: {
        enterOuterAlt(_localctx, 4);
        setState(76);
        doWhileStmt();
        break;
      }

      case MegaScryptParser::T__11: {
        enterOuterAlt(_localctx, 5);
        setState(77);
        forEachStmt();
        break;
      }

      case MegaScryptParser::T__13: {
        enterOuterAlt(_localctx, 6);
        setState(78);
        forStmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SubStatementContext ------------------------------------------------------------------

MegaScryptParser::SubStatementContext::SubStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MegaScryptParser::DeclarationContext* MegaScryptParser::SubStatementContext::declaration() {
  return getRuleContext<MegaScryptParser::DeclarationContext>(0);
}

MegaScryptParser::AssignmentContext* MegaScryptParser::SubStatementContext::assignment() {
  return getRuleContext<MegaScryptParser::AssignmentContext>(0);
}

MegaScryptParser::IncrementContext* MegaScryptParser::SubStatementContext::increment() {
  return getRuleContext<MegaScryptParser::IncrementContext>(0);
}

MegaScryptParser::InvocationContext* MegaScryptParser::SubStatementContext::invocation() {
  return getRuleContext<MegaScryptParser::InvocationContext>(0);
}


size_t MegaScryptParser::SubStatementContext::getRuleIndex() const {
  return MegaScryptParser::RuleSubStatement;
}


antlrcpp::Any MegaScryptParser::SubStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MegaScryptVisitor*>(visitor))
    return parserVisitor->visitSubStatement(this);
  else
    return visitor->visitChildren(this);
}

MegaScryptParser::SubStatementContext* MegaScryptParser::subStatement() {
  SubStatementContext *_localctx = _tracker.createInstance<SubStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, MegaScryptParser::RuleSubStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(81);
      declaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(82);
      assignment();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(83);
      increment();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(84);
      invocation();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctDeclarationContext ------------------------------------------------------------------

MegaScryptParser::FunctDeclarationContext::FunctDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MegaScryptParser::FunctDeclarationContext::LeftParanthesis() {
  return getToken(MegaScryptParser::LeftParanthesis, 0);
}

tree::TerminalNode* MegaScryptParser::FunctDeclarationContext::RightParanthesis() {
  return getToken(MegaScryptParser::RightParanthesis, 0);
}

MegaScryptParser::VarListContext* MegaScryptParser::FunctDeclarationContext::varList() {
  return getRuleContext<MegaScryptParser::VarListContext>(0);
}

std::vector<MegaScryptParser::StatementContext *> MegaScryptParser::FunctDeclarationContext::statement() {
  return getRuleContexts<MegaScryptParser::StatementContext>();
}

MegaScryptParser::StatementContext* MegaScryptParser::FunctDeclarationContext::statement(size_t i) {
  return getRuleContext<MegaScryptParser::StatementContext>(i);
}


size_t MegaScryptParser::FunctDeclarationContext::getRuleIndex() const {
  return MegaScryptParser::RuleFunctDeclaration;
}


antlrcpp::Any MegaScryptParser::FunctDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MegaScryptVisitor*>(visitor))
    return parserVisitor->visitFunctDeclaration(this);
  else
    return visitor->visitChildren(this);
}

MegaScryptParser::FunctDeclarationContext* MegaScryptParser::functDeclaration() {
  FunctDeclarationContext *_localctx = _tracker.createInstance<FunctDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, MegaScryptParser::RuleFunctDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(MegaScryptParser::T__3);
    setState(88);
    match(MegaScryptParser::LeftParanthesis);
    setState(90);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MegaScryptParser::Var) {
      setState(89);
      varList();
    }
    setState(92);
    match(MegaScryptParser::RightParanthesis);
    setState(93);
    match(MegaScryptParser::T__0);
    setState(97);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MegaScryptParser::T__5)
      | (1ULL << MegaScryptParser::T__6)
      | (1ULL << MegaScryptParser::T__9)
      | (1ULL << MegaScryptParser::T__10)
      | (1ULL << MegaScryptParser::T__11)
      | (1ULL << MegaScryptParser::T__13)
      | (1ULL << MegaScryptParser::Var)
      | (1ULL << MegaScryptParser::Break)
      | (1ULL << MegaScryptParser::PlusPlus)
      | (1ULL << MegaScryptParser::MinusMinus)
      | (1ULL << MegaScryptParser::Id))) != 0)) {
      setState(94);
      statement();
      setState(99);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(100);
    match(MegaScryptParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarListContext ------------------------------------------------------------------

MegaScryptParser::VarListContext::VarListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MegaScryptParser::VarListContext::Var() {
  return getTokens(MegaScryptParser::Var);
}

tree::TerminalNode* MegaScryptParser::VarListContext::Var(size_t i) {
  return getToken(MegaScryptParser::Var, i);
}

std::vector<tree::TerminalNode *> MegaScryptParser::VarListContext::Id() {
  return getTokens(MegaScryptParser::Id);
}

tree::TerminalNode* MegaScryptParser::VarListContext::Id(size_t i) {
  return getToken(MegaScryptParser::Id, i);
}


size_t MegaScryptParser::VarListContext::getRuleIndex() const {
  return MegaScryptParser::RuleVarList;
}


antlrcpp::Any MegaScryptParser::VarListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MegaScryptVisitor*>(visitor))
    return parserVisitor->visitVarList(this);
  else
    return visitor->visitChildren(this);
}

MegaScryptParser::VarListContext* MegaScryptParser::varList() {
  VarListContext *_localctx = _tracker.createInstance<VarListContext>(_ctx, getState());
  enterRule(_localctx, 10, MegaScryptParser::RuleVarList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(MegaScryptParser::Var);
    setState(103);
    match(MegaScryptParser::Id);
    setState(109);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MegaScryptParser::T__4) {
      setState(104);
      match(MegaScryptParser::T__4);
      setState(105);
      match(MegaScryptParser::Var);
      setState(106);
      match(MegaScryptParser::Id);
      setState(111);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStmtContext ------------------------------------------------------------------

MegaScryptParser::ReturnStmtContext::ReturnStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MegaScryptParser::ExpressionContext* MegaScryptParser::ReturnStmtContext::expression() {
  return getRuleContext<MegaScryptParser::ExpressionContext>(0);
}


size_t MegaScryptParser::ReturnStmtContext::getRuleIndex() const {
  return MegaScryptParser::RuleReturnStmt;
}


antlrcpp::Any MegaScryptParser::ReturnStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MegaScryptVisitor*>(visitor))
    return parserVisitor->visitReturnStmt(this);
  else
    return visitor->visitChildren(this);
}

MegaScryptParser::ReturnStmtContext* MegaScryptParser::returnStmt() {
  ReturnStmtContext *_localctx = _tracker.createInstance<ReturnStmtContext>(_ctx, getState());
  enterRule(_localctx, 12, MegaScryptParser::RuleReturnStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    match(MegaScryptParser::T__5);
    setState(114);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MegaScryptParser::T__3)
      | (1ULL << MegaScryptParser::T__14)
      | (1ULL << MegaScryptParser::True)
      | (1ULL << MegaScryptParser::False)
      | (1ULL << MegaScryptParser::Null)
      | (1ULL << MegaScryptParser::PlusPlus)
      | (1ULL << MegaScryptParser::MinusMinus)
      | (1ULL << MegaScryptParser::Exclaimation)
      | (1ULL << MegaScryptParser::Minus)
      | (1ULL << MegaScryptParser::LeftParanthesis)
      | (1ULL << MegaScryptParser::Id)
      | (1ULL << MegaScryptParser::Number)
      | (1ULL << MegaScryptParser::String))) != 0)) {
      setState(113);
      expression(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InvocationContext ------------------------------------------------------------------

MegaScryptParser::InvocationContext::InvocationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MegaScryptParser::InvocationContext::LeftParanthesis() {
  return getToken(MegaScryptParser::LeftParanthesis, 0);
}

MegaScryptParser::ParamListContext* MegaScryptParser::InvocationContext::paramList() {
  return getRuleContext<MegaScryptParser::ParamListContext>(0);
}

tree::TerminalNode* MegaScryptParser::InvocationContext::RightParanthesis() {
  return getToken(MegaScryptParser::RightParanthesis, 0);
}

tree::TerminalNode* MegaScryptParser::InvocationContext::Id() {
  return getToken(MegaScryptParser::Id, 0);
}

MegaScryptParser::PrototypeGetterContext* MegaScryptParser::InvocationContext::prototypeGetter() {
  return getRuleContext<MegaScryptParser::PrototypeGetterContext>(0);
}


size_t MegaScryptParser::InvocationContext::getRuleIndex() const {
  return MegaScryptParser::RuleInvocation;
}


antlrcpp::Any MegaScryptParser::InvocationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MegaScryptVisitor*>(visitor))
    return parserVisitor->visitInvocation(this);
  else
    return visitor->visitChildren(this);
}

MegaScryptParser::InvocationContext* MegaScryptParser::invocation() {
  InvocationContext *_localctx = _tracker.createInstance<InvocationContext>(_ctx, getState());
  enterRule(_localctx, 14, MegaScryptParser::RuleInvocation);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      setState(116);
      match(MegaScryptParser::Id);
      break;
    }

    case 2: {
      setState(117);
      prototypeGetter();
      break;
    }

    }
    setState(120);
    match(MegaScryptParser::LeftParanthesis);
    setState(121);
    paramList();
    setState(122);
    match(MegaScryptParser::RightParanthesis);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamListContext ------------------------------------------------------------------

MegaScryptParser::ParamListContext::ParamListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MegaScryptParser::ExpressionContext *> MegaScryptParser::ParamListContext::expression() {
  return getRuleContexts<MegaScryptParser::ExpressionContext>();
}

MegaScryptParser::ExpressionContext* MegaScryptParser::ParamListContext::expression(size_t i) {
  return getRuleContext<MegaScryptParser::ExpressionContext>(i);
}


size_t MegaScryptParser::ParamListContext::getRuleIndex() const {
  return MegaScryptParser::RuleParamList;
}


antlrcpp::Any MegaScryptParser::ParamListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MegaScryptVisitor*>(visitor))
    return parserVisitor->visitParamList(this);
  else
    return visitor->visitChildren(this);
}

MegaScryptParser::ParamListContext* MegaScryptParser::paramList() {
  ParamListContext *_localctx = _tracker.createInstance<ParamListContext>(_ctx, getState());
  enterRule(_localctx, 16, MegaScryptParser::RuleParamList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124);
    expression(0);
    setState(129);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MegaScryptParser::T__4) {
      setState(125);
      match(MegaScryptParser::T__4);
      setState(126);
      expression(0);
      setState(131);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

MegaScryptParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MegaScryptParser::IfStatementContext::LeftParanthesis() {
  return getToken(MegaScryptParser::LeftParanthesis, 0);
}

MegaScryptParser::ExpressionContext* MegaScryptParser::IfStatementContext::expression() {
  return getRuleContext<MegaScryptParser::ExpressionContext>(0);
}

tree::TerminalNode* MegaScryptParser::IfStatementContext::RightParanthesis() {
  return getToken(MegaScryptParser::RightParanthesis, 0);
}

MegaScryptParser::BlockContext* MegaScryptParser::IfStatementContext::block() {
  return getRuleContext<MegaScryptParser::BlockContext>(0);
}

MegaScryptParser::ElseStatementContext* MegaScryptParser::IfStatementContext::elseStatement() {
  return getRuleContext<MegaScryptParser::ElseStatementContext>(0);
}

std::vector<MegaScryptParser::ElseIfStatementContext *> MegaScryptParser::IfStatementContext::elseIfStatement() {
  return getRuleContexts<MegaScryptParser::ElseIfStatementContext>();
}

MegaScryptParser::ElseIfStatementContext* MegaScryptParser::IfStatementContext::elseIfStatement(size_t i) {
  return getRuleContext<MegaScryptParser::ElseIfStatementContext>(i);
}


size_t MegaScryptParser::IfStatementContext::getRuleIndex() const {
  return MegaScryptParser::RuleIfStatement;
}


antlrcpp::Any MegaScryptParser::IfStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MegaScryptVisitor*>(visitor))
    return parserVisitor->visitIfStatement(this);
  else
    return visitor->visitChildren(this);
}

MegaScryptParser::IfStatementContext* MegaScryptParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 18, MegaScryptParser::RuleIfStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    match(MegaScryptParser::T__6);
    setState(133);
    match(MegaScryptParser::LeftParanthesis);
    setState(134);
    expression(0);
    setState(135);
    match(MegaScryptParser::RightParanthesis);
    setState(136);
    block();
    setState(144);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
    case 1: {
      setState(140);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MegaScryptParser::T__7) {
        setState(137);
        elseIfStatement();
        setState(142);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(143);
      elseStatement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElseIfStatementContext ------------------------------------------------------------------

MegaScryptParser::ElseIfStatementContext::ElseIfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MegaScryptParser::ElseIfStatementContext::LeftParanthesis() {
  return getToken(MegaScryptParser::LeftParanthesis, 0);
}

MegaScryptParser::ExpressionContext* MegaScryptParser::ElseIfStatementContext::expression() {
  return getRuleContext<MegaScryptParser::ExpressionContext>(0);
}

tree::TerminalNode* MegaScryptParser::ElseIfStatementContext::RightParanthesis() {
  return getToken(MegaScryptParser::RightParanthesis, 0);
}

MegaScryptParser::BlockContext* MegaScryptParser::ElseIfStatementContext::block() {
  return getRuleContext<MegaScryptParser::BlockContext>(0);
}


size_t MegaScryptParser::ElseIfStatementContext::getRuleIndex() const {
  return MegaScryptParser::RuleElseIfStatement;
}


antlrcpp::Any MegaScryptParser::ElseIfStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MegaScryptVisitor*>(visitor))
    return parserVisitor->visitElseIfStatement(this);
  else
    return visitor->visitChildren(this);
}

MegaScryptParser::ElseIfStatementContext* MegaScryptParser::elseIfStatement() {
  ElseIfStatementContext *_localctx = _tracker.createInstance<ElseIfStatementContext>(_ctx, getState());
  enterRule(_localctx, 20, MegaScryptParser::RuleElseIfStatement);
